1.2.0
=====
Feature Release

Improvements
- Fixed typos in documentation.

New feature
- Added datetime picker widget. See https://github.com/Eonasdan/bootstrap-datetimepicker
- Added new "fields" command to generate.py command (in contrib) to export the
  entities of a given form as CSV.

1.1.0
=====
Feature and bugfix release.

New feature:
- Added "selected" config attribute to the radio renderer to preselect an
  entry from the option by its index.

Bugfix:
- Enable negativ value in integer and float fields.

1.0.3
=====
Internal release only already includes most of the features from 1.1.0 but
never has been released in the public.


1.0.2
=====
Maintenance release.

- Updated translations
- Ringo specific: Added optimized option loading.

1.0.1
=====
Bugfix release.

- Added more supported datatypes (interval, text) for fields. Type has already
  been supported but has not been detected properly.
- Fixed setting default values.
- Fixed some rendering issues.
- Fixed detection of empty checkboxes ([""]) is JS code.

1.0
===
LARGE REFACTORING AND CODE CLEANUP.

WARNING: This change can break up your running application and forces you to
do some code adaptions. See details below.

Basically splitted the large form.py into to modules. One for the form related
stuff and the other one containinig the fields.

Further there are now a Field for each supported datatype. Many of the field
and type specific code is now put into the fields. This should make the code
much more cleaner.

Possibible incompatiblities:

* Removed various getter and setter and property methods to access private
  attributes like _warnings and _errors of the fields. Those attributes has
  become public now and should be accessed directly. 

0.24.3
======
- Added preview to file fields. The preview shows the preview of an image file
  which will be uploaded.

- Fixed #23: Support other dateformat that german dateformat. If
  browserlanguage is not german that the datepicker will use ISO8601