@@ -64,6 +64,8 @@ def get_local_datetime(dt, timezone=None):
         dt = dt.replace(tzinfo=tz.gettz('UTC'))
     if not timezone:
         timezone = tz.tzlocal()
+    else:
+        timezone = tz.gettz(timezone)
     return dt.astimezone(timezone)
 
 
@@ -80,5 +82,6 @@ def get_utc_datetime(dt, timezone=None):
     """
     if not timezone:
         dt = dt.replace(tzinfo=tz.tzlocal())
-    timezone = tz.gettz('UTC')
-    return dt.astimezone(timezone)
+    else:
+        dt = dt.replace(tzinfo=tz.gettz(timezone))
+    return dt.astimezone(tz.gettz('UTC'))
